# embedded_workshop_2021

./: .gitignore  INSTALL.md  README.md
a_01_file/: Cargo.toml  Makefile  glibc_version.sh  test.txt
a_01_file/src/: main.c  main.cpp  main.rs
a_02_syscall/: Cargo.toml
a_02_syscall/src/: lib.rs
a_03_c_interop/c_calls_rust/: Cargo.toml  Makefile  cbindgen.toml
a_03_c_interop/c_calls_rust/ext/: Makefile  my_app
a_03_c_interop/c_calls_rust/src/: lib.rs
a_03_c_interop/generated_sys/: Cargo.toml  build.rs
a_03_c_interop/generated_sys/lib/: bindings.rs  point.c  point.h
a_03_c_interop/generated_sys/src/: lib.rs
a_03_c_interop/rust_calls_c/: Cargo.toml  Makefile  build.rs
a_04_pi/: sync.sh
a_04_pi/blink/: Cargo.toml
a_04_pi/blink/src/: main.rs
a_04_pi/pi_mem/: Cargo.toml  Makefile
a_04_pi/pi_mem/.cargo/: config.toml
b_01_java_cpp_interop/cpp_interop/: Cargo.toml  build.rs
b_01_java_cpp_interop/java_interop/: Cargo.toml  Makefile
b_02_no_std/bare_blink/: Cargo.toml  Makefile  kernel7.img
b_02_no_std/no_std_hello_world/: Cargo.toml  build.rs
c_01_hello_stm32/: .gitignore
c_01_hello_stm32/___deprecated_hello_button/: Cargo.toml
c_01_hello_stm32/btn/: Cargo.toml
c_01_hello_stm32/btn/src/: lib.rs
c_01_hello_stm32/hello_debug/: Cargo.toml  Embed.toml  debug.gdb
c_01_hello_stm32/hello_rtt/: Cargo.toml  Embed.toml
c_01_hello_stm32/hello_serial/: Cargo.toml
c_01_hello_stm32/hello_stm32/: Cargo.toml
c_02_rtic/hello_rtic/: Cargo.toml  Embed.toml
c_02_rtic/hello_rtic/src/: lib.rs
d_99_serial/driver/: Cargo.toml
d_99_serial/firmware/: Cargo.toml  Embed.toml
d_99_serial/firmware/.cargo/: config
d_99_serial/firmware/src/: main.rs
(+26 files in other folders)
