[package]
name = "hello_rtic"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.10"
# embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.10.1", features = ["rt", "stm32f411"] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
cortex-m-rtic = "0.6.0-rc.2"
fugit = "0.3.0"
rtic-monotonic = "0.1.0-rc.2"
dwt-systick-monotonic = "0.1.0-rc.2"