[package]
name = "firmware"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.10.1", features = ["rt", "stm32f411"] }
rtt-target = {version="0.3.1",  features = ["cortex-m"]}
panic-halt = "0.2.0"